--- a/templates/pageLevelProgressCounter.hbs
+++ b/templates/pageLevelProgressCounter.hbs
@@ -1,4 +1,4 @@
 {{import_globals}}
-<div class="pagelevelprogress-counter-inner {{type}}-counter-inner">
+<div class="pagelevelprogress__counter-inner">
   {{completed}} {{_globals._extensions._pageLevelProgress.counter}} {{total}}
 </div>
